@@ -1868,6 +1868,7 @@ test 'mycolumn and column';
 $dbi = MyDBI7->connect($NEW_ARGS->{0});
 $dbi->execute($CREATE_TABLE->{0});
 $dbi->execute($CREATE_TABLE->{2});
+$dbi->separator('__');
 $dbi->setup_model;
 $dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
 $dbi->insert(table => 'table2', param => {key1 => 1, key3 => 3});
@@ -2112,7 +2113,7 @@ $result = $model->select_at(
     ]
 );
 is_deeply($result->one,
-          {key1 => 1, key2 => 2, table2__key1 => 1, table2__key3 => 3});
+          {key1 => 1, key2 => 2, 'table2.key1' => 1, 'table2.key3' => 3});
 
 $result = $model->select_at(
     column => [
@@ -2121,7 +2122,7 @@ $result = $model->select_at(
     ]
 );
 is_deeply($result->one,
-          {key1 => 1, table2__key1 => 1});
+          {key1 => 1, 'table2.key1' => 1});
 $result = $model->select_at(
     column => [
         $model->mycolumn(['key1']),
@@ -2184,7 +2185,7 @@ $result = $model->select(
     where => {'table2_alias.key3' => 2}
 );
 is_deeply($result->one, 
-          {table2_alias__key1 => 1, table2_alias__key3 => 48});
+          {'table2_alias.key1' => 1, 'table2_alias.key3' => 48});
 
 test 'type() option';
 $dbi = DBIx::Custom->connect(
@@ -2241,7 +2242,7 @@ $result = $model->select(
     where => {'table1.key1' => 1}
 );
 is_deeply($result->one,
-          {key1 => 1, key2 => 2, 'table2__key1' => 1, 'table2__key3' => 3});
+          {key1 => 1, key2 => 2, 'table2.key1' => 1, 'table2.key3' => 3});
 is_deeply($model2->select->one, {key1 => 1, key3 => 3});
 
 test 'model method';
@@ -2557,7 +2558,7 @@ is($row->{key1}, 1);
 is($row->{key2}, 2);
 is($row->{key3}, 3);
 
-test 'col';
+test 'column separator is default .';
 $dbi = MyDBI7->connect($NEW_ARGS->{0});
 $dbi->execute($CREATE_TABLE->{0});
 $dbi->execute($CREATE_TABLE->{2});
@@ -2566,14 +2567,14 @@ $dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
 $dbi->insert(table => 'table2', param => {key1 => 1, key3 => 3});
 $model = $dbi->model('table1');
 $result = $model->select(
-    column => [$model->col('table2')],
+    column => [$model->column('table2')],
     where => {'table1.key1' => 1}
 );
 is_deeply($result->one,
           {'table2.key1' => 1, 'table2.key3' => 3});
 
 $result = $model->select(
-    column => [$model->col('table2' => [qw/key1 key3/])],
+    column => [$model->column('table2' => [qw/key1 key3/])],
     where => {'table1.key1' => 1}
 );
 is_deeply($result->one,
@@ -2753,6 +2754,20 @@ $result = $model->select(
 is_deeply($result->one,
           {key1 => 2, key2 => 2, 'table2.key1' => 3, 'table2.key3' => 9});
 is_deeply($model2->select->one, {key1 => 3, key3 => 9});
+
+$dbi->separator('__');
+$model = $dbi->model('table1');
+$result = $model->select(
+    column => [
+        $model->mycolumn,
+        {table2 => [qw/key1 key3/]}
+    ],
+    where => {'table1.key1' => 1}
+);
+is_deeply($result->one,
+          {key1 => 2, key2 => 2, 'table2__key1' => 3, 'table2__key3' => 9});
+is_deeply($model2->select->one, {key1 => 3, key3 => 9});
+
 
 test 'filter_off';
 $dbi = DBIx::Custom->connect($NEW_ARGS->{0});
